--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="section-content" style="text-align: center;">
             <h2>Resume</h2>
             <!-- Corrected Resume Download Button -->
-            <a href="resume2.pdf" class="download-button">Download CV</a>
+            <a href="resume2.pdf.pdf" class="download-button">Download CV</a>
         </div>
     </section>
 
